Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: scroll;
   -webkit-backdrop-filter: blur(3px);
   backdrop-filter: blur(3px);
 }
